// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it can render without an image 1`] = `
style = Object {
    "flex": 2,
    "borderColor": "#9EABBC",
    "borderBottomWidth": 0,
    "borderLeftWidth": 0,
    "borderRightWidth": 0,
    "borderTopWidth": 0,
    "borderBottomLeftRadius": 4,
    "borderTopLeftRadius": 4,
    "flexDirection": "row",
    "overflow": "hidden",
    "paddingBottom": 16,
    "paddingLeft": 16,
    "paddingRight": 16,
    "paddingTop": 16,
    "alignItems": "center",
    "justifyContent": "center",
    "fontSize": 14.791111111111112,
    "lineHeight": 16,
    "color": "#454D56",
    "fontFamily": "SF Pro Text"
}

<View
  style={
    Object {
      "borderBottomLeftRadius": 4,
      "borderBottomWidth": 0,
      "borderColor": "#9EABBC",
      "borderLeftWidth": 0,
      "borderRightWidth": 0,
      "borderTopLeftRadius": 4,
      "borderTopWidth": 0,
      "flex": 1,
      "flexDirection": "row",
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "borderBottomWidth": 0,
        "borderColor": "#9EABBC",
        "borderLeftWidth": 0,
        "borderRightWidth": 0,
        "borderTopWidth": 0,
        "flex": 2,
        "justifyContent": "center",
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      }
    }
  >
    <View
      justiyContent="center"
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 0,
          "borderColor": "#9EABBC",
          "borderLeftWidth": 0,
          "borderRightWidth": 0,
          "borderTopWidth": 0,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        numberOfLines={4}
        style={
          Object {
            "borderBottomWidth": 0,
            "borderColor": "#9EABBC",
            "borderLeftWidth": 0,
            "borderRightWidth": 0,
            "borderTopWidth": 0,
            "color": "#454D56",
            "fontFamily": "SF Pro Text",
            "fontSize": 14.791111111111112,
            "lineHeight": 16,
          }
        }
      >
        Some Article without image
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomWidth": 0,
        "borderColor": "#9EABBC",
        "borderLeftWidth": 0,
        "borderRightWidth": 0,
        "borderTopWidth": 0,
        "justifyContent": "center",
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#C5CDD7",
            "fontSize": 20,
          },
          undefined,
          Object {
            "fontFamily": "Ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`it renders correctly 1`] = `
style = Object {
    "flex": 2,
    "borderColor": "#9EABBC",
    "borderBottomWidth": 0,
    "borderLeftWidth": 0,
    "borderRightWidth": 0,
    "borderTopWidth": 0,
    "borderBottomLeftRadius": 4,
    "borderTopLeftRadius": 4,
    "flexDirection": "row",
    "overflow": "hidden",
    "paddingBottom": 16,
    "paddingLeft": 16,
    "paddingRight": 16,
    "paddingTop": 16,
    "alignItems": "center",
    "justifyContent": "center",
    "fontSize": 14.791111111111112,
    "lineHeight": 16,
    "color": "#454D56",
    "fontFamily": "SF Pro Text"
}

<View
  style={
    Object {
      "borderBottomLeftRadius": 4,
      "borderBottomWidth": 0,
      "borderColor": "#9EABBC",
      "borderLeftWidth": 0,
      "borderRightWidth": 0,
      "borderTopLeftRadius": 4,
      "borderTopWidth": 0,
      "flex": 1,
      "flexDirection": "row",
      "overflow": "hidden",
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "http://example.com/example.png",
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgb(116, 130, 148)",
            "bottom": 0,
            "flex": 1,
            "justifyContent": "center",
            "left": 0,
            "opacity": 0.4,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
  </Image>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "borderBottomWidth": 0,
        "borderColor": "#9EABBC",
        "borderLeftWidth": 0,
        "borderRightWidth": 0,
        "borderTopWidth": 0,
        "flex": 2,
        "justifyContent": "center",
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      }
    }
  >
    <View
      justiyContent="center"
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 0,
          "borderColor": "#9EABBC",
          "borderLeftWidth": 0,
          "borderRightWidth": 0,
          "borderTopWidth": 0,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        numberOfLines={4}
        style={
          Object {
            "borderBottomWidth": 0,
            "borderColor": "#9EABBC",
            "borderLeftWidth": 0,
            "borderRightWidth": 0,
            "borderTopWidth": 0,
            "color": "#454D56",
            "fontFamily": "SF Pro Text",
            "fontSize": 14.791111111111112,
            "lineHeight": 16,
          }
        }
      >
        Some Article
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomWidth": 0,
        "borderColor": "#9EABBC",
        "borderLeftWidth": 0,
        "borderRightWidth": 0,
        "borderTopWidth": 0,
        "justifyContent": "center",
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#C5CDD7",
            "fontSize": 20,
          },
          undefined,
          Object {
            "fontFamily": "Ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;
